{
  "@@locale": "hi",
  "appTitle": "टेस्टेबल ऐप",
  "welcomeBack": "टेस्टेबल ऐप",
  "appDescription": "यह स्थानीयकरण के लिए एक परीक्षण योग्य एप्लिकेशन है।",
  "hello": "नमस्ते",
  "welcome": "टेस्टेबल ऐप में आपका स्वागत है"
}
